--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -14,9 +14,11 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
+    "gulp-sequence": "^0.4.6",
     "gulp-sftp": "^0.1.4",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^1.1.0",
