--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
 			<artifactId>poi-scratchpad</artifactId>
 			<version>3.9</version>
 		</dependency>
+	   	<dependency>
+	                <groupId>org.apache.commons</groupId>
+	    		<artifactId>commons-lang3</artifactId>
+	    		<version>3.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>knowledge</finalName>
