--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -14,6 +14,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.5.2",
+    "gulp-connect": "^5.0.0",
     "gulp-copy": "0.0.2",
     "gulp-file-include": "^1.0.0",
     "gulp-htmlmin": "^3.0.0",
