--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -9,11 +9,12 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.2",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-cache": "^0.3.0",
     "gulp-clean": "^0.3.2",
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.5.2",
+    "gulp-connect": "^5.0.0",
     "gulp-copy": "0.0.2",
     "gulp-file-include": "^1.0.0",
     "gulp-htmlmin": "^3.0.0",
@@ -33,7 +34,8 @@
     "gulp-webserver": "^0.9.1",
     "gulp.spritesmith": "^4.1.0",
     "imagemin-pngquant": "^4.2.0",
-    "sprity": "^1.0.7"
+    "sprity": "^1.0.7",
+    "tiny-lr": "^1.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
