--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>lfcfront</groupId>
 	<artifactId>lfcfront</artifactId>
-	<packaging>war</packaging> 
+	<packaging>war</packaging>
 	<version>1.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator</artifactId>
@@ -112,13 +117,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.14</version>
 		</dependency>
-		<dependency> 
-		   <groupId>javax.servlet</groupId> 
-		   <artifactId>servlet-api</artifactId> 
-		   <version>2.5</version> 
-		   <scope>provided</scope> 
-		</dependency> 
-		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
@@ -139,10 +144,10 @@
 			<artifactId>poi-scratchpad</artifactId>
 			<version>3.9</version>
 		</dependency>
-	   	<dependency>
-	                <groupId>org.apache.commons</groupId>
-	    		<artifactId>commons-lang3</artifactId>
-	    		<version>3.1</version>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -181,14 +186,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-war-plugin</artifactId>
-	            <version>2.1.1</version>
-	            <configuration>
-	                <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
-	            </configuration>
-	        </plugin>
-	        <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.0.0</version>
